WordPress Theme Development
২৪.২ - কোডস্টার ফ্রেমওয়ার্ক দিয়ে মেটাবক্স বানানো
২৪.৩ - কোডস্টার ফ্রেমওয়ার্কের ফিল্ড ডিপেন্ডেন্সি (খুবই ইন্টারেস্টিং)

--- a/app/public/wp-content/themes/philosophy/lib/csf/languages/bn_BD.po
+++ b/app/public/wp-content/themes/philosophy/lib/csf/languages/bn_BD.po
@@ -58,8 +58,8 @@ msgid "VALUE"
 msgstr "মান"
 
 #: classes/options.class.php:213
-msgid "You are editing language: ( %s )"
-msgstr "আপনি ভাষা সম্পাদনা করছেনঃ %s )"
+msgid "You are editing language: ( <strong>%s</strong> )"
+msgstr "আপনি ভাষা সম্পাদনা করছেনঃ  <strong>%s</strong> )"
 
 #: classes/shortcode.class.php:82 classes/shortcode.class.php:90
 #: fields/textarea/textarea.php:27
@@ -100,8 +100,8 @@ msgid "or"
 msgstr "অথবা"
 
 #: fields/backup/backup.php:29
-msgid "Reset All Options"
-msgstr "সমস্ত অপশনসমূহ রিসেট"
+msgid "!!! Reset All Options !!!"
+msgstr "!!! সমস্ত অপশনসমূহ রিসেট !!!"
 
 #: fields/backup/backup.php:30
 msgid "Please be sure for reset all of framework options."
