--- a/app/public/wp-content/themes/philosophy/lib/csf/languages/ro_RO.po
+++ b/app/public/wp-content/themes/philosophy/lib/csf/languages/ro_RO.po
@@ -60,8 +60,8 @@ msgid "VALUE"
 msgstr "VALOARE"
 
 #: classes/options.class.php:211
-msgid "You are editing language: ( %s )"
-msgstr "Editați limba: ( %s )"
+msgid "You are editing language: ( <strong>%s</strong> )"
+msgstr "Editați limba: ( <strong>%s</strong> )"
 
 #: classes/shortcode.class.php:82 classes/shortcode.class.php:90
 #: fields/textarea/textarea.php:27
@@ -102,7 +102,7 @@ msgid "or"
 msgstr "sau"
 
 #: fields/backup/backup.php:29
-msgid "Reset All Options"
+msgid "!!! Reset All Options !!!"
 msgstr "Resetează toate opțiunile"
 
 #: fields/backup/backup.php:30
